	durchsuchen (nur Lesen!)

	* webui.sh: Caching des Passworts; Login nur, wenn Passwort nicht-leer

2006-05-01:

	* cfg2sh: allcfgconv-Parser separiert (macht Fritzbox-Config verdaubar
	für die Shell)

2006-05-02:

	* phonebook: Fehler bei Nutzung des FRITZ!Box-Telefonbuch behoben:
	Umlaute als Latin1; Wichtig-Flag (!) entfernt; letzte Zeile behalten

2006-05-05:

	callmonitor 1.9.4 veröffentlicht

2006-05-13:

	* inverse.sh: Rückwärtssuche über inverssuche.de entfernt

	* phonebook.sh: Ortsvorwahl automatisch aus AVM-Konfiguration übernehmen
	(einzustellen unter Telefonie/Internettelefonie/Erweiterte Einstellungen)

2006-05-17:

	callmonitor 1.9.5 veröffentlicht

2006-07-07:

	callmonitor 1.9.6 (Preview): 

	Maßnahmen gegen Abstürze wegen Überlastsituation beim Booten:

	* phonebook: Caching des Telefonbuchs von AVM; wird jetzt nur einmal
	beim Start des Callmonitors gelesen. Folge: Bei Änderungen des
	AVM-Telefonbuchs muss der Callmonitor neugestartet werden, damit er
	die Änderungen sieht.

	* phonebook: Caching der Ortskennzahl

	* sipnames: Sequentielles Eintragen der erzeugten Nummern

2006-07-08:

	* telefonbuch.sh: Rückwärtsuche bei dastelefonbuch.de an geändertes
	Webseitenformat angepasst

	* fonbuch.txt: Abfrage des AVM-Telefonbuchs repariert (Refresh fehlte)
	
	callmonitor 1.9.7 veröffentlicht

2006-07-14:

	* google.sh: Vorwahlsuche bei Google repariert

	* testlookup.sh: Einfache Seite, um alle Rückwärtssuche-Provider
	zu testen

	* telefonbuch: Auf wget umgestellt, um zuverlässiger eine
	Antwort zu bekommen
	
	* callmonitor.cfg: Default-Provider auf dasoertliche geändert

2006-07-21:

	* reverse.sh: Unterscheide besser zwischen "Teilnehmer nicht gefunden"
	und Fehler bei der Abfrage: Nur "nicht gefunden" wird gecachet.

	Immer die busybox-Version von 'nc' verwenden. (Es gibt jetzt ein
	netcat-Paket im ds-mod, dessen 'nc' sich anders verhält.)

2006-07-28:

	callmonitor 1.10 veröffentlicht